[package]
name = "db65"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
clap = {version="4.4.11", features=["derive"]}
evalexpr = "11.3.0"
#evalexpr = {path = "../forks/evalexpr"}
hex = "0.4.3"
once_cell = "1.19.0"
rustyline = {version="13.0.0", features=["with-file-history"]}
shlex = "1.2.0"
thiserror = "1.0.51"

[build-dependencies]
cc = "1.0.83"

[profile.release]
strip = true 
lto = true
