[package]
name = "db65"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
clap = {version="4.4.11", features=["derive"]}
ctrlc = "3.4.2"
evalexpr = "11.3.0"
#evalexpr = {path = "../forks/evalexpr"}
hex = "0.4.3"
log = "0.4.20"
once_cell = "1.19.0"
rustyline = {version="13.0.0", features=["with-file-history"]}
shlex = "1.2.0"

thiserror = "1.0.51"
dbgdata={path = "dbgdata"}
util={path="util"}

[build-dependencies]
built = {version = "0.7.1", features=["git2"]}
cc = "1.0.83"

[profile.release]
strip = true 
lto = true

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]

[workspace]
members=[ "dbgdata", "util"]
