[package]
name = "dbgdata"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
hex = "0.4.3"
log = "0.4.20"
once_cell = "1.19.0"

util = {path = "../util"}



[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
